add prometheus metrics and dashboard